# quicksearch

./: Cargo.toml  README.md
src/: cli.rs  config.rs  default.json  lib.rs  main.rs  opensearch.xml
