[package]
name = "quicksearch"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Configurable quick search engine shortcuts"
repository = "https://github.com/skarfie123/quicksearch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
config = "0.13.2"
open = "3.0.3"
rocket = "0.5.0-rc.2"
serde = "1.0.145"
serde_derive = "1.0.145"
urlencoding = "2.1.2"
